--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,11 @@
 {
   "packages": [
-    "packages/@assistant/*"
+    "packages/*"
   ],
-  "version": "0.1.3"
+  "command": {
+    "publish": {
+      "registry": "https://registry.npmjs.org"
+    }
+  },
+  "version": "0.0.0"
 }
