--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "root",
   "private": true,
   "scripts": {
-    "publish": "lerna bootstrap && lerna publish"
+    "release": "node scripts/release.js"
   },
   "devDependencies": {
-    "lerna": "^3.22.1"
+    "babel-plugin-tester": "^10.1.0",
+    "conventional-changelog-cli": "^2.1.1",
+    "enquirer": "^2.3.6",
+    "execa": "^5.1.1",
+    "lerna": "^4.0.0",
+    "minimist": "^1.2.5"
   }
 }
