--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -24,5 +24,8 @@
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.2"
+  },
+  "dependencies": {
+    "axios": "^0.21.3"
   }
 }
