--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-utils",
+  "name": "@luyuant/utils",
   "version": "0.0.0",
   "description": "",
   "main": "lib/index.common.min.js",
@@ -35,7 +35,7 @@
     "tslib": "^2.3.1",
     "typescript": "^4.4.2"
   },
-  "dependencies": {
-    "axios": "^0.21.3"
+  "peerDependencies": {
+    "axios": "^0.21.4"
   }
 }
