--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -40,5 +40,15 @@
   },
   "peerDependencies": {
     "axios": "^0.21.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*./src/*.{js,ts}": [
+      "yarn lint:f"
+    ]
   }
 }
