--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "build": "rollup -c build/build.js",
     "watch:build": "tsc -p tsconfig.module.json -w",
-    "lint": "eslint --ext .ts src/**",
-    "lint:f": "eslint --ext .ts src/** --fix",
+    "lint": "eslint --ext .ts src/** --fix",
     "test": "jest",
     "watch:test": "jest --watchAll --coverage"
   },
@@ -29,7 +28,7 @@
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.24.2",
-    "jest": "^27.1.0",
+    "jest": "^27.1.1",
     "rollup": "^2.56.3",
     "rollup-plugin-typescript": "^1.0.1",
     "rollup-plugin-uglify": "^6.0.4",
@@ -38,17 +37,7 @@
     "tslib": "^2.3.1",
     "typescript": "^4.4.2"
   },
-  "peerDependencies": {
+  "dependencies": {
     "axios": "^0.21.4"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*./src/*.{js,ts}": [
-      "yarn lint:f"
-    ]
   }
 }
