--- a/package.json
+++ b/package.json
@@ -7,13 +7,10 @@
     "prepare": "husky install"
   },
   "devDependencies": {
-    "babel-plugin-tester": "^10.1.0",
     "conventional-changelog-cli": "^2.1.1",
-    "enquirer": "^2.3.6",
     "execa": "^5.1.1",
     "husky": "^7.0.0",
     "lerna": "^4.0.0",
-    "lint-staged": "^11.1.2",
-    "minimist": "^1.2.5"
+    "lint-staged": "^11.1.2"
   }
 }
