--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -9,7 +9,8 @@
     "watch:build": "tsc -p tsconfig.module.json -w",
     "lint": "eslint --ext .ts src/** --fix",
     "test": "jest",
-    "watch:test": "jest --watchAll --coverage"
+    "watch:test": "jest --watchAll --coverage",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0"
   },
   "keywords": [],
   "types": "./dts/src/index.d.ts",
