--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -10,6 +10,10 @@
     "lib": [
       "esnext"
     ], // 用于指定在编译过程中需要包含进来的库文件
+    "target": "es2015", // 指定ECMAScript目标版本
+    "outDir": "dist/module", // 输出目录
+    "module": "esnext",  // 指定生成哪个模块系统代码
+    "useDefineForClassFields": true,
 
     /* 模块解析选项 */
     // "baseUrl": ".", // 解析非相对模块名的基准目录
